--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+# Used for deploying the contract
 PRIVATE_KEY=your-private-key
+
+# Used for encrypting buyer address
 PUBLIC_KEY=your-publick-key
 
 # This is default link, Change it to you own IPFS link.
